--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/sbd.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="author" content="rkskekzzz" />
+    <meta name="description" content="Sell Buy Day의 QR코드 리더 입니다." />
+    <title>Sell Buy Day</title>
   </head>
   <body style="margin: 0px">
     <div id="root"></div>
