--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sbd.svg" />
+    <link rel="icon" type="image/svg+xml" href="/sbd.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="rkskekzzz" />
     <meta name="description" content="Sell Buy Day의 QR코드 리더 입니다." />
